# exemple_projet

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: README-checkpoint.md
carbsimulator/: main.py
tests/: test_atom.py  test_mol.py  test_molecule.py  test_reaction_utils.py  test_reactions_utils.py
