[metadata]
name = carbsimulator
version = 0.1.0
description = A simple library to help someone working in the food industry to calculate his C02 impact.
long_description = file: README.md
author = Etienne Guevel
author_email = etienneguev@gmail.com

[options]
packages = find:
python_requires = >=3.8
